# api/docs/swagger.yaml
@@ -66,6 +66,17 @@ definitions:
       reservation_id:
         type: string
     type: object
+  payment.PaymentInsert:
+    properties:
+      amount:
+        type: number
+      payment_method:
+        type: string
+      payment_status:
+        type: string
+      reservation_id:
+        type: string
+    type: object
   payment.Status:
     properties:
       status:
@@ -467,7 +478,7 @@ paths:
         name: new_info
         required: true
         schema:
-          $ref: '#/definitions/payment.PaymentInfo'
+          $ref: '#/definitions/payment.PaymentInsert'
       produces:
       - application/json
       responses:
